# UDX710-UOOLS

./: CMakeLists.txt  README.md  README1.md  README_1.md  pack_fs.sh
.github/workflows/: Makefile.yml  cmake-multi-platform1.yml
src/: main.c
src/handlers/: http_server.c
src/system/: wifi.c  wifi.h
web/src/: App.vue
web/src/components/: SystemMonitor.vue  WiFiManager.vue
